# xelf

./: .gitignore  Cargo.toml  LICENSE  README.md  upgrade.py
src/: collections.rs  datetime.rs  db.rs  esvc.rs  ffi.rs  fs.rs  json.rs  lib.rs  net.rs  num.rs  orm_utils.rs  ptr.rs  serde.rs  service.rs  signal.rs  snowflake.rs  str.rs  vec.rs
src/ffi/: arc_handle_set.rs  handle_set.rs  mod.rs  parker_cache.rs  ptr.rs
src/future/: duplex.rs  mod.rs  mpsc.rs  signal.rs  sink.rs
