[package]
name = "rsx"
version = "0.3.3"
edition = "2021"

[lib]
name = "rsx"
path = "src/lib.rs"

[features]
default = ["minimal"]
minimal = ["datetime", "collections", "derive", "io", "memoffset", "once-cell"]
common = ["minimal", "async", "cfg-if", "fs", "hashmap", "net", "ouroboros", "ptr", "regex",
          "str", "sync", "with-bytes", "with-hex", "with-log", "with-serde"]
full = ["common", "db", "ffi", "signal", "with-actix"]

with-actix = ["actix", "actix-files", "actix-multipart", "actix-service",
    "actix-web", "actix-web-actors", "actix-web-httpauth", "url"]
with-bytes = ["bytes", "bytestring", "zerocopy"]
with-hex = ["hex", "hex-literal"]
with-log = ["log", "env-logger", "dotenv"]
with-serde = ["bytestring-serde", "chrono-serde", "json", "num", "serde", "serde-repr"]
with-rustls = ["rustls", "rustls-pemfile", "tokio-rustls"]

async = ["async-stream", "async-trait", "flume", "future", "futures", "futures-util",
	"mio", "parking-lot", "pin-project", "tokio", "tokio-stream", "tokio-util"]
collections = ["maplit", "smallvec", "vec"]
datetime = ["chrono", "num", "chrono-serde"]
db = ["async", "collections", "datetime", "hashmap", "minimal", "ouroboros", "regex",
    "rust-decimal", "snowflake", "str", "sync", "sea-orm", "sqlx", "with-bytes",
    "with-serde", "with-rustls"]
derive = ["derive-more", "num-enum", "smart-default", "strum"]
fs = ["io", "path-absolutize", "tempfile"]
ffi = ["cfg-if", "hashlink", "sync"]
future = []
hashmap = ["ahash", "hashlink", "maplit"]
io = []
json = ["base64", "serde", "serde-json", "num", "collections", "with-hex"]
net = ["ipnetwork", "socket2", "url", "winapi"]
num = []
ptr = ["memoffset", "once-cell"]
snowflake = ["smart-default"]
str = ["ptr"]
signal = ["futures", "tokio-stream"]
sync = ["arc-swap", "crossbeam", "flume", "num-cpus", "parking-lot"]
vec = []

bytestring-serde = ["bytestring/serde", "serde"]
chrono-serde = ["chrono/serde", "json", "serde"]

[dependencies]
actix = { version = "0.13", optional = true }
actix-files = { version = "0.6", optional = true }
actix-multipart = { version = "0.4", optional = true }
actix-service = { version = "2.0", optional = true }
actix-web = { version = "4.2", features = ["rustls"], optional = true }
actix-web-actors = { version = "4.1", optional = true }
actix-web-httpauth = { version = "0.8", optional = true }

ahash = { version = "0.8", optional = true }
maplit = { version = "1", optional = true }
ritelinked = { version = "0.3", optional = true }
hashlink = { version = "0.8", optional = true }
smallvec = { version = "1", optional = true }

bytes = { version = "1", optional = true }
bytestring = { version = "1", optional = true }

chrono = { version = "0.4", optional = true }

derive-more = { version = "0.99", package = "derive_more", optional = true }
num-enum = { version = "0.5", package = "num_enum", optional = true }
smart-default = { version = "0.6", optional = true }
strum = { version = "0.24", features = ["derive"], optional = true }

cfg-if = { version = "1", optional = true }
dotenv = { version = "0.15", optional = true }
env-logger = { version = "0.9", package = "env_logger", optional = true }
log = { version = "0.4", optional = true }
path-absolutize = { version = "3", optional = true }

async-stream = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
mio = { version = "0.8", optional = true }
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-stream = { version = "0.1", features = [
    "time", "sync", "signal", "net", "fs", "io-util"], optional = true }
tokio-util = { version = "0.7", features = ["full"], optional = true }

hex = { version = "0.4", optional = true }
hex-literal = { version = "0.3", optional = true }

ipnetwork = { version = "0.20", optional = true }
socket2 = { version = "0.4", optional = true }
url = { version = "2", optional = true }

num-cpus = { version = "1", package = "num_cpus", optional = true }
memoffset = { version = "0.7", optional = true }
zerocopy = { version = "0.6", optional = true }

once-cell = { version = "1", package = "once_cell", optional = true }
ouroboros = { version = "0.15", optional = true }

regex = { version = "1", optional = true }

base64 = { version = "0.13", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-json = { version = "1", package = "serde_json", optional = true }
serde-repr = { version = "0.1", package = "serde_repr", optional = true }

tempfile = { version = "3", optional = true }

rustls = { version = "0.20", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = { version = "1.0", optional = true }

arc-swap = { version = "1", optional = true }
crossbeam = { version = "0.8", optional = true }
flume = { version = "0.10", optional = true }
parking-lot = { version = "0.12", package = "parking_lot", optional = true }

rust-decimal = { version = "1", package = "rust_decimal", optional = true }
sea-orm = { version = "0.10", features = [
    "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "runtime-tokio"
    ], optional = true }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls", "postgres", "sqlite", "migrate", "any"
    ], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["mswsock"], optional = true }
